// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration flutter flutter/class.dart separate should match snapshot 1`] = `
Object {
  "data": Array [
    10,
    47,
    47,
    10,
    47,
    47,
    32,
    115,
    116,
    121,
    108,
    101,
    95,
    100,
    105,
    99,
    116,
    105,
    111,
    110,
    97,
    114,
    121,
    95,
    99,
    111,
    108,
    111,
    114,
    46,
    100,
    97,
    114,
    116,
    10,
    47,
    47,
    10,
    47,
    47,
    32,
    68,
    111,
    32,
    110,
    111,
    116,
    32,
    101,
    100,
    105,
    116,
    32,
    100,
    105,
    114,
    101,
    99,
    116,
    108,
    121,
    10,
    47,
    47,
    32,
    71,
    101,
    110,
    101,
    114,
    97,
    116,
    101,
    100,
    32,
    111,
    110,
    32,
    83,
    97,
    116,
    44,
    32,
    48,
    49,
    32,
    74,
    97,
    110,
    32,
    50,
    48,
    48,
    48,
    32,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    48,
    32,
    71,
    77,
    84,
    10,
    47,
    47,
    10,
    10,
    10,
    105,
    109,
    112,
    111,
    114,
    116,
    32,
    39,
    100,
    97,
    114,
    116,
    58,
    117,
    105,
    39,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    83,
    116,
    121,
    108,
    101,
    68,
    105,
    99,
    116,
    105,
    111,
    110,
    97,
    114,
    121,
    67,
    111,
    108,
    111,
    114,
    32,
    123,
    10,
    32,
    32,
    83,
    116,
    121,
    108,
    101,
    68,
    105,
    99,
    116,
    105,
    111,
    110,
    97,
    114,
    121,
    67,
    111,
    108,
    111,
    114,
    46,
    95,
    40,
    41,
    59,
    10,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    68,
    97,
    110,
    103,
    101,
    114,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    65,
    69,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    68,
    105,
    115,
    97,
    98,
    108,
    101,
    100,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    69,
    69,
    49,
    69,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    73,
    110,
    102,
    111,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    57,
    70,
    56,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    80,
    114,
    105,
    109,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    70,
    70,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    83,
    101,
    99,
    111,
    110,
    100,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    51,
    70,
    52,
    70,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    83,
    117,
    99,
    99,
    101,
    115,
    115,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    66,
    70,
    57,
    69,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    84,
    101,
    114,
    116,
    105,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    69,
    69,
    49,
    69,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    97,
    99,
    107,
    103,
    114,
    111,
    117,
    110,
    100,
    87,
    97,
    114,
    110,
    105,
    110,
    103,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    68,
    69,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    111,
    114,
    100,
    101,
    114,
    80,
    114,
    105,
    109,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    56,
    67,
    67,
    67,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    114,
    97,
    110,
    100,
    80,
    114,
    105,
    109,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    66,
    56,
    53,
    57,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    114,
    97,
    110,
    100,
    83,
    101,
    99,
    111,
    110,
    100,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    70,
    53,
    69,
    68,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    57,
    70,
    67,
    70,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    53,
    70,
    57,
    70,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    56,
    51,
    68,
    52,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    50,
    56,
    51,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    65,
    53,
    70,
    50,
    70,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    55,
    54,
    69,
    53,
    69,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    51,
    68,
    54,
    69,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    49,
    55,
    66,
    56,
    67,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    55,
    57,
    55,
    65,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    66,
    56,
    53,
    57,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    70,
    54,
    69,
    56,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    65,
    113,
    117,
    97,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    51,
    53,
    69,
    55,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    57,
    70,
    56,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    67,
    70,
    50,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    65,
    51,
    57,
    54,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    50,
    49,
    51,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    55,
    69,
    52,
    70,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    65,
    49,
    68,
    50,
    70,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    54,
    65,
    68,
    70,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    56,
    57,
    54,
    69,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    66,
    56,
    55,
    68,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    48,
    55,
    57,
    67,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    49,
    49,
    54,
    68,
    65,
    65,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    66,
    108,
    117,
    101,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    67,
    53,
    54,
    56,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    66,
    70,
    57,
    69,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    55,
    70,
    52,
    68,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    56,
    52,
    50,
    50,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    50,
    66,
    50,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    50,
    70,
    50,
    66,
    68,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    56,
    69,
    53,
    56,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    55,
    53,
    68,
    68,
    54,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    57,
    67,
    66,
    53,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    66,
    66,
    54,
    53,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    67,
    65,
    55,
    53,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    56,
    66,
    52,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    71,
    114,
    101,
    101,
    110,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    54,
    66,
    52,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    69,
    70,
    48,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    57,
    69,
    51,
    70,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    52,
    53,
    49,
    53,
    53,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    57,
    49,
    57,
    50,
    68,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    52,
    67,
    52,
    70,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    68,
    65,
    68,
    70,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    50,
    56,
    50,
    70,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    66,
    54,
    49,
    68,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    52,
    52,
    69,
    66,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    65,
    67,
    52,
    52,
    65,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    56,
    70,
    51,
    56,
    57,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    77,
    97,
    103,
    101,
    110,
    116,
    97,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    67,
    50,
    50,
    55,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    70,
    70,
    70,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    51,
    70,
    52,
    70,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    49,
    54,
    50,
    48,
    50,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    52,
    48,
    52,
    48,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    69,
    69,
    49,
    69,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    56,
    67,
    67,
    67,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    66,
    48,
    66,
    54,
    66,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    50,
    57,
    65,
    57,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    69,
    55,
    57,
    55,
    65,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    49,
    53,
    69,
    53,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    54,
    52,
    49,
    52,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    78,
    101,
    117,
    116,
    114,
    97,
    108,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    55,
    51,
    51,
    51,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    68,
    69,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    67,
    68,
    67,
    67,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    48,
    49,
    55,
    48,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    68,
    49,
    51,
    48,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    67,
    54,
    65,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    66,
    49,
    56,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    57,
    67,
    53,
    68,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    67,
    56,
    57,
    52,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    53,
    55,
    68,
    51,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    68,
    55,
    48,
    50,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    69,
    53,
    53,
    49,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    79,
    114,
    97,
    110,
    103,
    101,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    54,
    50,
    67,
    48,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    57,
    70,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    67,
    68,
    66,
    69,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    54,
    49,
    50,
    51,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    66,
    49,
    55,
    50,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    66,
    53,
    68,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    57,
    53,
    67,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    55,
    54,
    65,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    70,
    53,
    56,
    56,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    48,
    52,
    52,
    55,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    69,
    51,
    54,
    54,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    66,
    50,
    50,
    70,
    53,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    105,
    110,
    107,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    51,
    49,
    56,
    52,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    50,
    70,
    50,
    70,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    65,
    69,
    65,
    70,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    68,
    50,
    52,
    54,
    66,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    49,
    68,
    49,
    68,
    51,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    56,
    68,
    55,
    70,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    49,
    67,
    49,
    70,
    55,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    65,
    49,
    57,
    51,
    70,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    49,
    56,
    48,
    70,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    56,
    49,
    54,
    70,
    69,
    65,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    70,
    53,
    69,
    68,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    69,
    52,
    69,
    66,
    65,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    80,
    117,
    114,
    112,
    108,
    101,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    52,
    56,
    51,
    65,
    57,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    65,
    69,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    68,
    53,
    68,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    68,
    49,
    51,
    49,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    66,
    49,
    49,
    49,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    66,
    56,
    66,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    57,
    67,
    56,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    55,
    70,
    54,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    55,
    54,
    48,
    53,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    68,
    52,
    67,
    52,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    66,
    51,
    69,
    51,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    54,
    51,
    52,
    51,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    82,
    101,
    100,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    57,
    50,
    50,
    50,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    69,
    53,
    70,
    57,
    70,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    67,
    68,
    70,
    55,
    69,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    56,
    51,
    70,
    51,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    50,
    53,
    50,
    56,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    66,
    51,
    70,
    50,
    69,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    55,
    68,
    69,
    65,
    68,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    52,
    69,
    48,
    67,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    56,
    67,
    52,
    66,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    48,
    65,
    57,
    57,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    66,
    57,
    54,
    56,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    54,
    55,
    67,
    55,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    84,
    101,
    97,
    108,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    50,
    54,
    54,
    54,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    70,
    56,
    69,
    50,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    68,
    69,
    70,
    67,
    68,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    49,
    48,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    53,
    52,
    50,
    65,
    48,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    49,
    49,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    68,
    49,
    65,
    48,
    53,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    50,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    57,
    57,
    65,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    51,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    69,
    49,
    54,
    69,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    52,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    68,
    57,
    52,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    53,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    67,
    68,
    49,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    54,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    70,
    70,
    66,
    67,
    48,
    48,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    55,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    68,
    68,
    57,
    57,
    48,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    56,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    66,
    65,
    55,
    53,
    48,
    54,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    111,
    114,
    101,
    89,
    101,
    108,
    108,
    111,
    119,
    57,
    48,
    48,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    57,
    52,
    52,
    67,
    48,
    67,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    68,
    97,
    110,
    103,
    101,
    114,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    68,
    49,
    51,
    49,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    68,
    105,
    115,
    97,
    98,
    108,
    101,
    100,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    54,
    52,
    49,
    52,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    71,
    104,
    111,
    115,
    116,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    54,
    52,
    49,
    52,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    73,
    110,
    116,
    101,
    114,
    97,
    99,
    116,
    105,
    118,
    101,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    66,
    56,
    53,
    57,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    73,
    110,
    116,
    101,
    114,
    97,
    99,
    116,
    105,
    118,
    101,
    65,
    99,
    116,
    105,
    118,
    101,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    70,
    53,
    69,
    68,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    73,
    110,
    116,
    101,
    114,
    97,
    99,
    116,
    105,
    118,
    101,
    68,
    105,
    115,
    97,
    98,
    108,
    101,
    100,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    54,
    52,
    49,
    52,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    73,
    110,
    116,
    101,
    114,
    97,
    99,
    116,
    105,
    118,
    101,
    70,
    111,
    99,
    117,
    115,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    70,
    53,
    69,
    68,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    73,
    110,
    116,
    101,
    114,
    97,
    99,
    116,
    105,
    118,
    101,
    72,
    111,
    118,
    101,
    114,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    66,
    56,
    53,
    57,
    57,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    80,
    114,
    105,
    109,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    52,
    48,
    52,
    48,
    52,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    83,
    101,
    99,
    111,
    110,
    100,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    50,
    55,
    51,
    51,
    51,
    51,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    83,
    117,
    99,
    99,
    101,
    115,
    115,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    48,
    56,
    52,
    50,
    50,
    70,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    84,
    101,
    114,
    116,
    105,
    97,
    114,
    121,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    51,
    54,
    52,
    49,
    52,
    49,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    115,
    116,
    97,
    116,
    105,
    99,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    102,
    111,
    110,
    116,
    87,
    97,
    114,
    110,
    105,
    110,
    103,
    32,
    61,
    32,
    67,
    111,
    108,
    111,
    114,
    40,
    48,
    120,
    70,
    70,
    54,
    48,
    49,
    55,
    48,
    48,
    41,
    59,
    10,
    125,
  ],
  "type": "Buffer",
}
`;

exports[`integration flutter flutter/class.dart should match snapshot 1`] = `
"
//
// style_dictionary.dart
//
// Do not edit directly
// Generated on Sat, 01 Jan 2000 00:00:00 GMT
//


import 'dart:ui';

class StyleDictionary {
  StyleDictionary._();

    static const colorBackgroundDanger = Color(0xFFFFEAE9);
    static const colorBackgroundDisabled = Color(0xFFDEE1E1);
    static const colorBackgroundInfo = Color(0xFFE9F8FF);
    static const colorBackgroundPrimary = Color(0xFFFFFFFF);
    static const colorBackgroundSecondary = Color(0xFFF3F4F4);
    static const colorBackgroundSuccess = Color(0xFFEBF9EB);
    static const colorBackgroundTertiary = Color(0xFFDEE1E1);
    static const colorBackgroundWarning = Color(0xFFFFEDE3);
    static const colorBorderPrimary = Color(0xFFC8CCCC);
    static const colorBrandPrimary = Color(0xFF0B8599);
    static const colorBrandSecondary = Color(0xFF6F5ED3);
    static const colorCoreAqua0 = Color(0xFFD9FCFB);
    static const colorCoreAqua100 = Color(0xFFC5F9F9);
    static const colorCoreAqua1000 = Color(0xFF083D4F);
    static const colorCoreAqua1100 = Color(0xFF002838);
    static const colorCoreAqua200 = Color(0xFFA5F2F2);
    static const colorCoreAqua300 = Color(0xFF76E5E2);
    static const colorCoreAqua400 = Color(0xFF33D6E2);
    static const colorCoreAqua500 = Color(0xFF17B8CE);
    static const colorCoreAqua600 = Color(0xFF0797AE);
    static const colorCoreAqua700 = Color(0xFF0B8599);
    static const colorCoreAqua800 = Color(0xFF0F6E84);
    static const colorCoreAqua900 = Color(0xFF035E73);
    static const colorCoreBlue0 = Color(0xFFE9F8FF);
    static const colorCoreBlue100 = Color(0xFFDCF2FF);
    static const colorCoreBlue1000 = Color(0xFF0A3960);
    static const colorCoreBlue1100 = Color(0xFF002138);
    static const colorCoreBlue200 = Color(0xFFC7E4F9);
    static const colorCoreBlue300 = Color(0xFFA1D2F8);
    static const colorCoreBlue400 = Color(0xFF56ADF5);
    static const colorCoreBlue500 = Color(0xFF3896E3);
    static const colorCoreBlue600 = Color(0xFF2B87D3);
    static const colorCoreBlue700 = Color(0xFF2079C3);
    static const colorCoreBlue800 = Color(0xFF116DAA);
    static const colorCoreBlue900 = Color(0xFF0C5689);
    static const colorCoreGreen0 = Color(0xFFEBF9EB);
    static const colorCoreGreen100 = Color(0xFFD7F4D7);
    static const colorCoreGreen1000 = Color(0xFF08422F);
    static const colorCoreGreen1100 = Color(0xFF002B20);
    static const colorCoreGreen200 = Color(0xFFC2F2BD);
    static const colorCoreGreen300 = Color(0xFF98E58E);
    static const colorCoreGreen400 = Color(0xFF75DD66);
    static const colorCoreGreen500 = Color(0xFF59CB59);
    static const colorCoreGreen600 = Color(0xFF2BB656);
    static const colorCoreGreen700 = Color(0xFF0CA750);
    static const colorCoreGreen800 = Color(0xFF008B46);
    static const colorCoreGreen900 = Color(0xFF006B40);
    static const colorCoreMagenta0 = Color(0xFFFEF0FF);
    static const colorCoreMagenta100 = Color(0xFFF9E3FC);
    static const colorCoreMagenta1000 = Color(0xFF451551);
    static const colorCoreMagenta1100 = Color(0xFF29192D);
    static const colorCoreMagenta200 = Color(0xFFF4C4F7);
    static const colorCoreMagenta300 = Color(0xFFEDADF2);
    static const colorCoreMagenta400 = Color(0xFFF282F5);
    static const colorCoreMagenta500 = Color(0xFFDB61DB);
    static const colorCoreMagenta600 = Color(0xFFC44EB9);
    static const colorCoreMagenta700 = Color(0xFFAC44A8);
    static const colorCoreMagenta800 = Color(0xFF8F3896);
    static const colorCoreMagenta900 = Color(0xFF6C2277);
    static const colorCoreNeutral0 = Color(0xFFFFFFFF);
    static const colorCoreNeutral100 = Color(0xFFF3F4F4);
    static const colorCoreNeutral1000 = Color(0xFF162020);
    static const colorCoreNeutral1100 = Color(0xFF040404);
    static const colorCoreNeutral200 = Color(0xFFDEE1E1);
    static const colorCoreNeutral300 = Color(0xFFC8CCCC);
    static const colorCoreNeutral400 = Color(0xFFB0B6B7);
    static const colorCoreNeutral500 = Color(0xFF929A9B);
    static const colorCoreNeutral600 = Color(0xFF6E797A);
    static const colorCoreNeutral700 = Color(0xFF515E5F);
    static const colorCoreNeutral800 = Color(0xFF364141);
    static const colorCoreNeutral900 = Color(0xFF273333);
    static const colorCoreOrange0 = Color(0xFFFFEDE3);
    static const colorCoreOrange100 = Color(0xFFFCDCCC);
    static const colorCoreOrange1000 = Color(0xFF601700);
    static const colorCoreOrange1100 = Color(0xFF2D130E);
    static const colorCoreOrange200 = Color(0xFFFFC6A4);
    static const colorCoreOrange300 = Color(0xFFFFB180);
    static const colorCoreOrange400 = Color(0xFFFF9C5D);
    static const colorCoreOrange500 = Color(0xFFFC8943);
    static const colorCoreOrange600 = Color(0xFFF57D33);
    static const colorCoreOrange700 = Color(0xFFED7024);
    static const colorCoreOrange800 = Color(0xFFCE5511);
    static const colorCoreOrange900 = Color(0xFF962C0B);
    static const colorCorePink0 = Color(0xFFFFE9F3);
    static const colorCorePink100 = Color(0xFFFCDBEB);
    static const colorCorePink1000 = Color(0xFF561231);
    static const colorCorePink1100 = Color(0xFF2B1721);
    static const colorCorePink200 = Color(0xFFFFB5D5);
    static const colorCorePink300 = Color(0xFFFF95C1);
    static const colorCorePink400 = Color(0xFFFF76AE);
    static const colorCorePink500 = Color(0xFFEF588B);
    static const colorCorePink600 = Color(0xFFE0447C);
    static const colorCorePink700 = Color(0xFFCE3665);
    static const colorCorePink800 = Color(0xFFB22F5B);
    static const colorCorePink900 = Color(0xFF931847);
    static const colorCorePurple0 = Color(0xFFF2F2F9);
    static const colorCorePurple100 = Color(0xFFEAEAF9);
    static const colorCorePurple1000 = Color(0xFF2D246B);
    static const colorCorePurple1100 = Color(0xFF1D1D38);
    static const colorCorePurple200 = Color(0xFFD8D7F9);
    static const colorCorePurple300 = Color(0xFFC1C1F7);
    static const colorCorePurple400 = Color(0xFFA193F2);
    static const colorCorePurple500 = Color(0xFF9180F4);
    static const colorCorePurple600 = Color(0xFF816FEA);
    static const colorCorePurple700 = Color(0xFF6F5ED3);
    static const colorCorePurple800 = Color(0xFF5E4EBA);
    static const colorCorePurple900 = Color(0xFF483A9C);
    static const colorCoreRed0 = Color(0xFFFFEAE9);
    static const colorCoreRed100 = Color(0xFFFFD5D2);
    static const colorCoreRed1000 = Color(0xFF6D1313);
    static const colorCoreRed1100 = Color(0xFF2B1111);
    static const colorCoreRed200 = Color(0xFFFFB8B1);
    static const colorCoreRed300 = Color(0xFFFF9C8F);
    static const colorCoreRed400 = Color(0xFFFF7F6E);
    static const colorCoreRed500 = Color(0xFFF76054);
    static const colorCoreRed600 = Color(0xFFED4C42);
    static const colorCoreRed700 = Color(0xFFDB3E3E);
    static const colorCoreRed800 = Color(0xFFC63434);
    static const colorCoreRed900 = Color(0xFF992222);
    static const colorCoreTeal0 = Color(0xFFE5F9F5);
    static const colorCoreTeal100 = Color(0xFFCDF7EF);
    static const colorCoreTeal1000 = Color(0xFF083F3F);
    static const colorCoreTeal1100 = Color(0xFF002528);
    static const colorCoreTeal200 = Color(0xFFB3F2E6);
    static const colorCoreTeal300 = Color(0xFF7DEAD5);
    static const colorCoreTeal400 = Color(0xFF24E0C5);
    static const colorCoreTeal500 = Color(0xFF08C4B2);
    static const colorCoreTeal600 = Color(0xFF00A99C);
    static const colorCoreTeal700 = Color(0xFF0B968F);
    static const colorCoreTeal800 = Color(0xFF067C7C);
    static const colorCoreTeal900 = Color(0xFF026661);
    static const colorCoreYellow0 = Color(0xFFFFF8E2);
    static const colorCoreYellow100 = Color(0xFFFDEFCD);
    static const colorCoreYellow1000 = Color(0xFF542A00);
    static const colorCoreYellow1100 = Color(0xFF2D1A05);
    static const colorCoreYellow200 = Color(0xFFFFE99A);
    static const colorCoreYellow300 = Color(0xFFFFE16E);
    static const colorCoreYellow400 = Color(0xFFFFD943);
    static const colorCoreYellow500 = Color(0xFFFFCD1C);
    static const colorCoreYellow600 = Color(0xFFFFBC00);
    static const colorCoreYellow700 = Color(0xFFDD9903);
    static const colorCoreYellow800 = Color(0xFFBA7506);
    static const colorCoreYellow900 = Color(0xFF944C0C);
    static const colorFontDanger = Color(0xFF6D1313);
    static const colorFontDisabled = Color(0xFF364141);
    static const colorFontGhost = Color(0xFF364141);
    static const colorFontInteractive = Color(0xFF0B8599);
    static const colorFontInteractiveActive = Color(0xFF6F5ED3);
    static const colorFontInteractiveDisabled = Color(0xFF364141);
    static const colorFontInteractiveFocus = Color(0xFF6F5ED3);
    static const colorFontInteractiveHover = Color(0xFF0B8599);
    static const colorFontPrimary = Color(0xFF040404);
    static const colorFontSecondary = Color(0xFF273333);
    static const colorFontSuccess = Color(0xFF08422F);
    static const colorFontTertiary = Color(0xFF364141);
    static const colorFontWarning = Color(0xFF601700);
    static const sizeBorderRadiusLarge = 480.00;
    static const sizeFontLarge = 24.00;
    static const sizeFontMedium = 16.00;
    static const sizeFontSmall = 12.00;
    static const sizeFontXl = 36.00;
    static const sizePaddingLarge = 16.00;
    static const sizePaddingMedium = 16.00;
    static const sizePaddingSmall = 8.00;
    static const sizePaddingXl = 16.00;
}"
`;

exports[`integration flutter flutter/class.dart with references should match snapshot 1`] = `
"
//
// style_dictionary_with_references.dart
//
// Do not edit directly
// Generated on Sat, 01 Jan 2000 00:00:00 GMT
//


import 'dart:ui';

class StyleDictionary {
  StyleDictionary._();

    static const colorBackgroundDanger = colorCoreRed0;
    static const colorBackgroundDisabled = colorBackgroundTertiary;
    static const colorBackgroundInfo = colorCoreBlue0;
    static const colorBackgroundPrimary = colorCoreNeutral0;
    static const colorBackgroundSecondary = colorCoreNeutral100;
    static const colorBackgroundSuccess = colorCoreGreen0;
    static const colorBackgroundTertiary = colorCoreNeutral200;
    static const colorBackgroundWarning = colorCoreOrange0;
    static const colorBorderPrimary = colorCoreNeutral300;
    static const colorBrandPrimary = colorCoreAqua700;
    static const colorBrandSecondary = colorCorePurple700;
    static const colorCoreAqua0 = Color(0xFFD9FCFB);
    static const colorCoreAqua100 = Color(0xFFC5F9F9);
    static const colorCoreAqua1000 = Color(0xFF083D4F);
    static const colorCoreAqua1100 = Color(0xFF002838);
    static const colorCoreAqua200 = Color(0xFFA5F2F2);
    static const colorCoreAqua300 = Color(0xFF76E5E2);
    static const colorCoreAqua400 = Color(0xFF33D6E2);
    static const colorCoreAqua500 = Color(0xFF17B8CE);
    static const colorCoreAqua600 = Color(0xFF0797AE);
    static const colorCoreAqua700 = Color(0xFF0B8599);
    static const colorCoreAqua800 = Color(0xFF0F6E84);
    static const colorCoreAqua900 = Color(0xFF035E73);
    static const colorCoreBlue0 = Color(0xFFE9F8FF);
    static const colorCoreBlue100 = Color(0xFFDCF2FF);
    static const colorCoreBlue1000 = Color(0xFF0A3960);
    static const colorCoreBlue1100 = Color(0xFF002138);
    static const colorCoreBlue200 = Color(0xFFC7E4F9);
    static const colorCoreBlue300 = Color(0xFFA1D2F8);
    static const colorCoreBlue400 = Color(0xFF56ADF5);
    static const colorCoreBlue500 = Color(0xFF3896E3);
    static const colorCoreBlue600 = Color(0xFF2B87D3);
    static const colorCoreBlue700 = Color(0xFF2079C3);
    static const colorCoreBlue800 = Color(0xFF116DAA);
    static const colorCoreBlue900 = Color(0xFF0C5689);
    static const colorCoreGreen0 = Color(0xFFEBF9EB);
    static const colorCoreGreen100 = Color(0xFFD7F4D7);
    static const colorCoreGreen1000 = Color(0xFF08422F);
    static const colorCoreGreen1100 = Color(0xFF002B20);
    static const colorCoreGreen200 = Color(0xFFC2F2BD);
    static const colorCoreGreen300 = Color(0xFF98E58E);
    static const colorCoreGreen400 = Color(0xFF75DD66);
    static const colorCoreGreen500 = Color(0xFF59CB59);
    static const colorCoreGreen600 = Color(0xFF2BB656);
    static const colorCoreGreen700 = Color(0xFF0CA750);
    static const colorCoreGreen800 = Color(0xFF008B46);
    static const colorCoreGreen900 = Color(0xFF006B40);
    static const colorCoreMagenta0 = Color(0xFFFEF0FF);
    static const colorCoreMagenta100 = Color(0xFFF9E3FC);
    static const colorCoreMagenta1000 = Color(0xFF451551);
    static const colorCoreMagenta1100 = Color(0xFF29192D);
    static const colorCoreMagenta200 = Color(0xFFF4C4F7);
    static const colorCoreMagenta300 = Color(0xFFEDADF2);
    static const colorCoreMagenta400 = Color(0xFFF282F5);
    static const colorCoreMagenta500 = Color(0xFFDB61DB);
    static const colorCoreMagenta600 = Color(0xFFC44EB9);
    static const colorCoreMagenta700 = Color(0xFFAC44A8);
    static const colorCoreMagenta800 = Color(0xFF8F3896);
    static const colorCoreMagenta900 = Color(0xFF6C2277);
    static const colorCoreNeutral0 = Color(0xFFFFFFFF);
    static const colorCoreNeutral100 = Color(0xFFF3F4F4);
    static const colorCoreNeutral1000 = Color(0xFF162020);
    static const colorCoreNeutral1100 = Color(0xFF040404);
    static const colorCoreNeutral200 = Color(0xFFDEE1E1);
    static const colorCoreNeutral300 = Color(0xFFC8CCCC);
    static const colorCoreNeutral400 = Color(0xFFB0B6B7);
    static const colorCoreNeutral500 = Color(0xFF929A9B);
    static const colorCoreNeutral600 = Color(0xFF6E797A);
    static const colorCoreNeutral700 = Color(0xFF515E5F);
    static const colorCoreNeutral800 = Color(0xFF364141);
    static const colorCoreNeutral900 = Color(0xFF273333);
    static const colorCoreOrange0 = Color(0xFFFFEDE3);
    static const colorCoreOrange100 = Color(0xFFFCDCCC);
    static const colorCoreOrange1000 = Color(0xFF601700);
    static const colorCoreOrange1100 = Color(0xFF2D130E);
    static const colorCoreOrange200 = Color(0xFFFFC6A4);
    static const colorCoreOrange300 = Color(0xFFFFB180);
    static const colorCoreOrange400 = Color(0xFFFF9C5D);
    static const colorCoreOrange500 = Color(0xFFFC8943);
    static const colorCoreOrange600 = Color(0xFFF57D33);
    static const colorCoreOrange700 = Color(0xFFED7024);
    static const colorCoreOrange800 = Color(0xFFCE5511);
    static const colorCoreOrange900 = Color(0xFF962C0B);
    static const colorCorePink0 = Color(0xFFFFE9F3);
    static const colorCorePink100 = Color(0xFFFCDBEB);
    static const colorCorePink1000 = Color(0xFF561231);
    static const colorCorePink1100 = Color(0xFF2B1721);
    static const colorCorePink200 = Color(0xFFFFB5D5);
    static const colorCorePink300 = Color(0xFFFF95C1);
    static const colorCorePink400 = Color(0xFFFF76AE);
    static const colorCorePink500 = Color(0xFFEF588B);
    static const colorCorePink600 = Color(0xFFE0447C);
    static const colorCorePink700 = Color(0xFFCE3665);
    static const colorCorePink800 = Color(0xFFB22F5B);
    static const colorCorePink900 = Color(0xFF931847);
    static const colorCorePurple0 = Color(0xFFF2F2F9);
    static const colorCorePurple100 = Color(0xFFEAEAF9);
    static const colorCorePurple1000 = Color(0xFF2D246B);
    static const colorCorePurple1100 = Color(0xFF1D1D38);
    static const colorCorePurple200 = Color(0xFFD8D7F9);
    static const colorCorePurple300 = Color(0xFFC1C1F7);
    static const colorCorePurple400 = Color(0xFFA193F2);
    static const colorCorePurple500 = Color(0xFF9180F4);
    static const colorCorePurple600 = Color(0xFF816FEA);
    static const colorCorePurple700 = Color(0xFF6F5ED3);
    static const colorCorePurple800 = Color(0xFF5E4EBA);
    static const colorCorePurple900 = Color(0xFF483A9C);
    static const colorCoreRed0 = Color(0xFFFFEAE9);
    static const colorCoreRed100 = Color(0xFFFFD5D2);
    static const colorCoreRed1000 = Color(0xFF6D1313);
    static const colorCoreRed1100 = Color(0xFF2B1111);
    static const colorCoreRed200 = Color(0xFFFFB8B1);
    static const colorCoreRed300 = Color(0xFFFF9C8F);
    static const colorCoreRed400 = Color(0xFFFF7F6E);
    static const colorCoreRed500 = Color(0xFFF76054);
    static const colorCoreRed600 = Color(0xFFED4C42);
    static const colorCoreRed700 = Color(0xFFDB3E3E);
    static const colorCoreRed800 = Color(0xFFC63434);
    static const colorCoreRed900 = Color(0xFF992222);
    static const colorCoreTeal0 = Color(0xFFE5F9F5);
    static const colorCoreTeal100 = Color(0xFFCDF7EF);
    static const colorCoreTeal1000 = Color(0xFF083F3F);
    static const colorCoreTeal1100 = Color(0xFF002528);
    static const colorCoreTeal200 = Color(0xFFB3F2E6);
    static const colorCoreTeal300 = Color(0xFF7DEAD5);
    static const colorCoreTeal400 = Color(0xFF24E0C5);
    static const colorCoreTeal500 = Color(0xFF08C4B2);
    static const colorCoreTeal600 = Color(0xFF00A99C);
    static const colorCoreTeal700 = Color(0xFF0B968F);
    static const colorCoreTeal800 = Color(0xFF067C7C);
    static const colorCoreTeal900 = Color(0xFF026661);
    static const colorCoreYellow0 = Color(0xFFFFF8E2);
    static const colorCoreYellow100 = Color(0xFFFDEFCD);
    static const colorCoreYellow1000 = Color(0xFF542A00);
    static const colorCoreYellow1100 = Color(0xFF2D1A05);
    static const colorCoreYellow200 = Color(0xFFFFE99A);
    static const colorCoreYellow300 = Color(0xFFFFE16E);
    static const colorCoreYellow400 = Color(0xFFFFD943);
    static const colorCoreYellow500 = Color(0xFFFFCD1C);
    static const colorCoreYellow600 = Color(0xFFFFBC00);
    static const colorCoreYellow700 = Color(0xFFDD9903);
    static const colorCoreYellow800 = Color(0xFFBA7506);
    static const colorCoreYellow900 = Color(0xFF944C0C);
    static const colorFontDanger = colorCoreRed1000;
    static const colorFontDisabled = colorFontTertiary;
    static const colorFontGhost = colorFontDisabled;
    static const colorFontInteractive = colorBrandPrimary;
    static const colorFontInteractiveActive = colorBrandSecondary;
    static const colorFontInteractiveDisabled = colorFontDisabled;
    static const colorFontInteractiveFocus = colorFontInteractiveActive;
    static const colorFontInteractiveHover = colorBrandPrimary;
    static const colorFontPrimary = colorCoreNeutral1100;
    static const colorFontSecondary = colorCoreNeutral900;
    static const colorFontSuccess = colorCoreGreen1000;
    static const colorFontTertiary = colorCoreNeutral800;
    static const colorFontWarning = colorCoreOrange1000;
    static const sizeBorderRadiusLarge = 480.00;
    static const sizeFontLarge = 24.00;
    static const sizeFontMedium = 16.00;
    static const sizeFontSmall = 12.00;
    static const sizeFontXl = 36.00;
    static const sizePaddingLarge = 16.00;
    static const sizePaddingMedium = 16.00;
    static const sizePaddingSmall = 8.00;
    static const sizePaddingXl = 16.00;
}"
`;
